security_group.tf
resource "aws_security_group" "my_sg" {
  name        = "terraform_sg"
  description = "Allow TLS inbound traffic"

  ingress {
    description = "Allow SSH port"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

 ingress {
    description = "Allow http port" 
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "terraform-sg"
  }
}
